added a README file to the random messages  package

--- a/random_messages/package.json
+++ b/random_messages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "estebansant_random_messages",
   "version": "1.0.0",
-  "description": "Creates random messages",
+  "description": "This is a package that generates random names of people when you execute it",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
