--- a/random_messages/package.json
+++ b/random_messages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "estebansant_random_messages",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is a package that generates random names of people when you execute it",
   "main": "./src/index.js",
   "scripts": {
@@ -18,7 +18,11 @@
   "author": "Esteban Santiago",
   "license": "MIT",
   "bin": {
-    "random_messages": "./bin/global.js"
+    "random_messages": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "bugs": {
+    "url": "https://github.com/estebansant/jsnpm/issues"
+  },
+  "homepage": "https://github.com/estebansant/jsnpm#readme"
 }
